# secrets-of-rust

./: README.md
count/: Cargo.toml
count/src/: main.rs
count2/src/: main.rs
count3/: Cargo.toml
count3/src/: lib.rs  main.rs
count4/src/: lib.rs
count5/src/: lib.rs  main.rs
count6/src/: lib.rs
count7/src/: lib.rs  main.rs
count8/: Cargo.toml
count8/src/: main.rs
count8/tests/: integration.rs
count9/: Cargo.toml
count9/src/: main.rs
hello/src/: lib.rs  main.rs
logbook/: Cargo.toml  logbook.txt
logbook/src/: main.rs
logbook2/: Cargo.toml  README.md
logbook2/src/: lib.rs  main.rs
memo/src/: lib.rs  main.rs
memo2/: Cargo.toml  memos.txt
memo2/src/: lib.rs  main.rs
memo3/: Cargo.toml  memos.json
memo3/src/: lib.rs  main.rs
slim/: Cargo.toml
slim/src/: lib.rs  main.rs
slim/tests/data/proj_1/: Cargo.toml
slim/tests/data/proj_2/: Cargo.toml
slim/tests/data/proj_3/: Cargo.toml
timer/: Cargo.toml
timer/src/: main.rs
timer2/src/: lib.rs  main.rs
weather/: Cargo.toml
weather/src/: main.rs
weather2/: Cargo.toml
weather2/src/: lib.rs  main.rs
weather2/tests/data/: current_weather.json
