[package]
name = "logbook"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Record observations in a logbook file, or list previous observations.
"""
keywords = ["cli", "utility", "text"]
categories = ["command line utilities"]
repository = "https://github.com/michal-hynek/secrets-of-rust"

[dependencies]
anyhow = "1.0.98"

[dev-dependencies]
tempfile = "3.19.1"
